--- a/book-network-ui/src/app/pages/activate-account/activate-account.component.html
+++ b/book-network-ui/src/app/pages/activate-account/activate-account.component.html
@@ -1,5 +1,20 @@
 <div class="container" *ngIf="submitted else codeForm">
 
+    <div class="activate-message" *ngIf="isOkay else activationError">
+        <h2>Activation successful!</h2>
+        <p>Your account has been successfully activated.</p>
+        <button class="btn btn-primary" (click)="redirectToLogin()">Go to Login</button>
+    </div>
+    <ng-template #activationError>
+        
+            <div class="activate-error">
+                <h2>Activation Failed!</h2>
+                <p>{{message}}</p>
+                <button class="btn btn-primary" (click)="submitted = false">Try again</button>
+            </div>
+
+    </ng-template>
+    
 </div>
 
 <ng-template #codeForm>
@@ -7,7 +22,13 @@
     <div class="container">
         <div style="width: 400px;" class="text-center">
             <h2>Type your activation code</h2>
-            <code-input></code-input>
+            <code-input [isCodeHidden]="false"
+                        [codeLength]="6"
+                        [code]="'number'"
+                        (codeCompleted)="onCodeCompleted($event)"> 
+
+            </code-input>
+           
         </div>
     </div>
 
