--- a/book-network-ui/src/app/modules/book/pages/book-list/book-list.component.html
+++ b/book-network-ui/src/app/modules/book/pages/book-list/book-list.component.html
@@ -1,6 +1,6 @@
 <h3>Books list</h3>
 <hr>
-<div class="d-flex justify-content-start gap-2 flex-wrap">
-    <span *ngFor="let book of bookResponse.content">{{book.title}}</span>
 
+<div class="d-flex justify-content-start gap-2 flex-wrap">
+    <app-book-card [book]="book" *ngFor="let book of bookResponse.content"></app-book-card>
 </div>
